--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
         <title>finish-mobile-version</title>
     </head>
 <body>
-    <section class="template-1">
-        
-    </section>
+    <div class="grid-container">
+        <div class="grid1">template1</div>
+        <div class="grid2">template2</div>
+        <div class="grid3">template3</div>
+        <div class="grid4">template4</div>
+    </div>
 </body>
 </html>
