--- a/index.html
+++ b/index.html
@@ -9,10 +9,30 @@
     </head>
 <body>
     <div class="grid-container">
-        <div class="grid1">template1</div>
-        <div class="grid2">template2</div>
-        <div class="grid3">template3</div>
-        <div class="grid4">template4</div>
+        <div class="flex1">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+        </div>
+        <div class="flex2">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+        </div>
+        <div class="flex3">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+        </div>
+        <div class="flex4">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+        </div>
     </div>
 </body>
 </html>
