--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="grid-container">
         <div class="flex1">
             <div>1</div>
-            <div>2</div>
+            <div class="tonic">Tonic</div>
             <div>3</div>
             <div>4</div>
         </div>
