--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
         <div class="newmes">
           <button type="submit" class="go-newmes">See projects</button>
         </div>
-      </div>
-    </section>
-  </main>
+        </div>
+        </section>
+        </main>
   <section class="contact-me">
     <div class="head-section-co">
       <div id="head-container-co">
@@ -282,19 +282,19 @@
               </button>
             </div>
             <ul class="language-list">
-              <li class="event9">
+              <li class="JavaScript1">
                 <div class="lang">
                   <img src="./images/Ellipse-1.png" alt="" />
                   <p>JavaSript</p>
                 </div>
               </li>
-              <li class="event10">
+              <li class="HTML1">
                 <div class="lang">
                   <img src="./images/Ellipse-2.png" alt="" />
                   <p>HTML</p>
                 </div>
               </li>
-              <li class="event11">
+              <li class="CSS1">
                 <div class="lang">
                   <img src="./images/Ellipse-3.png" alt="" />
                   <p>CSS</p>
