--- a/index.html
+++ b/index.html
@@ -180,10 +180,6 @@
           <button type="submit" class="go-newmes">See projects</button>
         </div>
       </div>
-    </section>
-
-
-    <section class="works-card-tonic">
       <img class="snapshort" src="./images/snap4.png" alt="snapshoot" />
       <div class="left-block">
         <div class="first-container">
@@ -282,23 +278,21 @@
               </button>
             </div>
             <ul class="language-list">
-              <li class="JavaScript1">
-                <div class="lang">
-                  <img src="./images/Ellipse-1.png" alt="" />
-                  <p>JavaSript</p>
-                </div>
-              </li>
-              <li class="HTML1">
-                <div class="lang">
-                  <img src="./images/Ellipse-2.png" alt="" />
-                  <p>HTML</p>
-                </div>
-              </li>
-              <li class="CSS1">
-                <div class="lang">
-                  <img src="./images/Ellipse-3.png" alt="" />
-                  <p>CSS</p>
-                </div>
+              <li class="lang">
+                <ul>
+                  <li class="JavaScript1">
+                    <img src="./images/Ellipse-1.png" alt="" />
+                    <p>JavaSript</p>
+                  </li>
+                  <li class="HTML1">
+                    <img src="./images/Ellipse-2.png" alt="" />
+                    <p>HTML</p>
+                  </li>
+                  <li class="CSS1">
+                    <img src="./images/Ellipse-3.png" alt="" />
+                    <p>CSS</p>
+                  </li>
+                </ul>
               </li>
             </ul>
           </div>
