--- a/index.html
+++ b/index.html
@@ -180,12 +180,13 @@
           <button type="submit" class="go-newmes">See projects</button>
         </div>
       </div>
+    </section>
+    <section class="works-card">
       <img class="snapshort" src="./images/snap4.png" alt="snapshoot" />
       <div class="left-block">
         <div class="first-container">
           <h2 class="newme-title">
             Multi-Post Stories<br />
-
           </h2>
           <div class="event2-tonic">
             <div class="word">
@@ -216,13 +217,14 @@
             javascript
           </li>
         </ul>
-
-        <div class="newmes">
-          <button type="submit" class="go-newmes">See projects</button>
-        </div>
-        </div>
-        </section>
-        </main>
+      </div>
+    </section>
+      <div class="newmes">
+        <button type="submit" class="go-newmes">See projects</button>
+      </div>
+    </div>
+  </section>
+</main>
   <section class="contact-me">
     <div class="head-section-co">
       <div id="head-container-co">
@@ -277,23 +279,29 @@
                 <img src="./images/Icon-Chevron-Down-Larger.png" alt="" />
               </button>
             </div>
-            <ul class="language-list">
-              <li class="lang">
+            <ul>
+              <li class="language-list">
                 <ul>
                   <li class="JavaScript1">
-                    <img src="./images/Ellipse-1.png" alt="" />
-                    <p>JavaSript</p>
+                    <div class="lang">
+                      <img src="./images/Ellipse-1.png" alt="" />
+                      <p>JavaSript</p>
+                    </div>
                   </li>
                   <li class="HTML1">
-                    <img src="./images/Ellipse-2.png" alt="" />
-                    <p>HTML</p>
+                    <div class="lang">
+                      <img src="./images/Ellipse-2.png" alt="" />
+                      <p>HTML</p>
+                    </div>
                   </li>
                   <li class="CSS1">
-                    <img src="./images/Ellipse-3.png" alt="" />
-                    <p>CSS</p>
+                    <div class="lang">
+                      <img src="./images/Ellipse-3.png" alt="" />
+                      <p>CSS</p>
+                    </div>
                   </li>
                 </ul>
-              </li>
+              </li>		
             </ul>
           </div>
           <div class="event-skill">
