ul and li fixed

--- a/index.html
+++ b/index.html
@@ -270,16 +270,15 @@
         <div class="new-code">
           <button type="submit" class="go-newmes">My resume</button>
         </div>
-
-        <div class="skill">
-          <div class="event12">
-            <div class="event7">
+        
+        <ul class="skill">
+          <li class="event12">
+            <li class="event7">
               <h3 class="languages">Languages</h3>
               <button type="submit" class="dropdown">
                 <img src="./images/Icon-Chevron-Down-Larger.png" alt="" />
               </button>
-            </div>
-            <ul>
+            </li>            
               <li class="language-list">
                 <ul>
                   <li class="JavaScript1">
@@ -301,31 +300,32 @@
                     </div>
                   </li>
                 </ul>
-              </li>		
-            </ul>
-          </div>
-          <div class="event-skill">
-            <div class="event18">
+              </li>	            
+          </li>
+          <ul class="event-skill">
+            <li class="event18">
               <h3>Frameworks</h3>
               <button type="submit" class="dropdown">
                 <img src="./images/Disabled.png" alt="" />
               </button>
-            </div>
+            </li>
             <img src="./images/Separator-Bottom.png" alt="" class="separator" />
-            <div class="event18">
+            <li class="event18">
               <h3>Skills</h3>
               <button type="submit" class="dropdown">
                 <img src="./images/Disabled.png" alt="" />
               </button>
-            </div>
+            </li>
             <img src="./images/Separator-Bottom.png" alt="" class="separator" />
-          </div>
-        </div>
+          </ul>
+        </ul>
+        
+        </ul>
       </div>
     </div>
-    </div>
-    </div>
-     </section>
+  </div>
+</div>
+</section>
 </body>
 
 </html>
